--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,17 @@
 body {
     font-family: 'karla' sans-serif;
+    font-family: 'storm' karla;
     color: aliceblue;
+}
+
+@font-face {
+  font-family: 'storm';
+  src: url('public/fonts/Storm\ Gust.otf');
+}
+
+@font-face {
+  font-family: 'drips';
+  src: url('public/fonts/StayDrips-Regular.otf');
 }
 
 :root {
@@ -9,10 +20,10 @@ body {
     --title-color: hsl(0, 0%, 15%);
     --text-color: hsl(0, 0%, 35%);
     --body-color: hsl(0, 0%, 95%);
-    --container-color: hsl(0, 0%, 100%);
+    --container-color: hsl(0, 100%, 15%);
 
     --body-font: "Poppins", sans-serif;
-    --h2-font-size: 1.25rem;
+    --h2-font-size: 2.50rem;
     --small-font-size: .813rem;
 }
 
@@ -53,7 +64,9 @@ body {
     font-family: 'karla', sans-serif;
     overflow-y: hidden;
     overflow-x: hidden;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
+    background-image: url(public/img/backsection3.gif);
+    background-size: cover;
 }
 
 .section-four {
@@ -138,7 +151,7 @@ body {
     width: 100px;
     background-color: var(--container-color);
     padding: 1rem 1rem;
-    box-shadow: 0 8px 24px hsla(0, 0%, 0%, .15);
+    box-shadow: 0 8px 24px hsla(0, 0%, 0%, 0.15);
     border-radius: 1rem;
     position: absolute;
     bottom: -9rem;
@@ -150,9 +163,10 @@ body {
 }
 
 .section-two .info__title {
-    font-size: var(--h2-font-size);
+    font-size: 40px;
     font-weight: 500;
-    color: var(--title-color);
+    font-family: 'drips', karla;
+    color: rgb(255, 0, 0);
     margin-bottom: .75rem;
 }
 
@@ -160,7 +174,7 @@ body {
     text-decoration: none;
     font-size: var(--small-font-size);
     font-weight: 500;
-    color: var(--first-color);
+    color: rgb(255, 0, 0);
 }
 
 .section-two .info__button:hover {
@@ -189,6 +203,7 @@ body {
     display: block;
     font-size: var(--small-font-size);
     margin-bottom: .25rem;
+
 }
 
 @keyframes show-data {
@@ -331,31 +346,34 @@ body {
 }
 
 .container__title {
-  font-size: var(--h1-font-size);
+  font-size: 100px;
   text-align: center;
-  color: var(--title-color);
-  margin-bottom: 3rem;
+  color: rgb(192, 16, 16);
+  font-family: 'storm', karla;
+  margin-top: 100px;
 }
 
 .card__container {
   display: grid;
   grid-template-columns: 1fr;
   justify-content: center;
-  gap: 2rem;
+  flex-wrap: wrap;
 }
 
 .card__product {
   background-color: var(--body-color);
   border: 4px solid var(--first-color);
+  border-color: rgb(199, 19, 19);
   padding-block: 1.25rem;
   text-align: center;
   display: grid;
+  flex-wrap: wrap;
   row-gap: 1.5rem;
   cursor: pointer;
 }
 
 .card__img {
-  width: 200px;
+  width: 150px;
   justify-self: center;
   filter: drop-shadow(0 8px 16px hsla(5, 90%, 4%, .2));
   transition: transform .3s;
@@ -414,7 +432,7 @@ body {
 }
 
 .modal__img {
-  width: 220px;
+  width: 100px;
   justify-self: center;
   filter: drop-shadow(0 8px 16px hsla(5, 90%, 4%, .2));
 }
@@ -582,4 +600,37 @@ body {
 .principal .personagens .lista-personagem {
     background-image: url('public/img/background-fundo.png');
     object-fit: cover;
+}
+
+.card__container {
+  padding: 0;
+  margin-bottom: 300px;
+}
+
+.section-two {
+  background-color: black;
+}
+
+#animatronics {
+  margin-top: 50px;
+  margin-bottom: 15px;
+  align-items: center;
+  display: grid;
+  justify-items: center;
+}
+
+.section-four img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px;
+  margin-left: 550px;
+}
+
+.section-four button {
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  margin-left: 400px;
+  width: 300px;
 }
